fix layout shift

--- a/assets/styles/post.css
+++ b/assets/styles/post.css
@@ -28,7 +28,7 @@ body {
 }
 
 h1 {
-  margin-bottom: 48px;
+  margin-bottom: 32px;
 }
 
 h2 {
